--- a/package.json
+++ b/package.json
@@ -1,15 +1,61 @@
 {
-  "name": "corporativo-pi",
+  "name": "corporativo_muscleway",
   "version": "1.0.0",
+  "description": "Corporativo MuscleWay",
   "main": "main.js",
+
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "dist": "electron-builder"
   },
+
+  "build": {
+    "appId": "com.muscleway.corporativo",
+    "productName": "Corporativo MuscleWay",
+
+    "directories": {
+      "output": "dist",
+      "buildResources": "build"
+    },
+
+    "files": [
+      "main.js",
+      "preload.js",
+      "package.json"
+    ],
+
+    "extraResources": [
+      {
+        "from": "server",
+        "to": "app/server"
+      },
+      {
+        "from": "server/views",
+        "to": "app/server/views"
+      },
+      {
+        "from": "server/public",
+        "to": "app/server/public"
+      }
+    ],
+
+    "asar": false,
+
+    "win": {
+      "target": "nsis",
+      "icon": "build/icon.ico"
+    }
+  },
+
   "dependencies": {
-    "ejs": "^3.1.10",
-    "electron": "^31.0.0",
-    "express": "^4.21.2",
+    "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "mysql2": "^3.15.3"
+    "ejs": "^3.1.10",
+    "mysql2": "^3.14.5"
+  },
+
+  "devDependencies": {
+    "electron": "^38.1.0",
+    "electron-builder": "^26.0.12"
   }
 }
